[package]
name = "only_every"
version = "0.1.0"
edition = "2018"
license = "Unlicense"
description = "A simple rate-limiter macro: only_every!(Duration::from_millis(200), expensive_expression)"
readme = "README.md"
repository = "https://github.com/ahicks92/only_every"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quanta = { version = "0.9.3", optional = true }
